Initial multi environment support

--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -1,217 +1,10 @@
-a.anchor#vm-settings
-.row.step.step1 ng-controller='VirtualMachineController'
-  .col-lg-1.step-number.visible-lg-block
-    h1 1
-  .col-lg-11.step-conf
-    .panel.panel-default
-      .panel-heading
-        h2.panel-title System
-      .panel-body
-        .row
-          .col-lg-8
-            .row
-              .col-lg-6
-                .form-group
-                  label for='vm_os' Operating System
-                  select.form-control required=true id='vm_os' name='box[vm_os]' ng-options='os.name for os in osList track by os.box' ng-model='configuration.vm_os'
-
-              .col-lg-6
-                .form-group
-                  label Additional packages
-                  p
-                    label.checkbox-inline ng-repeat='(k, v) in packages'
-                      input type='checkbox' name='box[package_bundles][]' value='{{ k }}' ng-model='v.selected'
-                      span data-toggle='tooltip' data-placement='top' title='{{ v.packages.join(", ") }}' {{ v.label }}
-                      input ng-repeat='package in v.packages' type='hidden' name='box[packages][]' value='{{ package }}' ng-disabled='!v.selected'
-            .row
-              .col-lg-6
-                .form-group
-                  label.checkbox-inline
-                    input type='checkbox' name='box[autoconf]' value='true' ng-model='configuration.autoconf'
-                    = t('.autoconf')
-                    p.small ng-show='configuration.autoconf' VirtualBox will use all of available CPU cores and 1/3 of available RAM. This option is recommended if you are using one virtual machine at a time.
-              .col-lg-6
-                .form-group
-                  label.checkbox-inline
-                    input type='checkbox' name='box[docker]' value='true' ng-model='configuration.docker'
-                    = t('.docker')
-                    p.small Deploy all services to <a href="https://www.docker.com/">Docker</a> containers. <a href="https://github.com/phusion/baseimage-docker">baseimage-docker</a> will be used. <strong>Please note that Docker support was not tested thoroughly and provided as is.</strong>
-            .row ng-hide='configuration.autoconf'
-              .col-lg-4
-                .form-group
-                  label for='vm_memory'= t('.memory')
-                  input.form-control required=true id='vm_memory' name='box[vm_memory]' type='text' ng-model='configuration.vm_memory' ng-pattern="/^[0-9]+$/"
-              .col-lg-4
-                .form-group
-                  label for='vm_swap' Swap, Mb
-                  input.form-control required=true id='vm_swap' name='box[vm_swap]' type='text' ng-model='configuration.vm_swap' ng-pattern="/^[0-9]+$/"
-              .col-lg-4
-                .form-group
-                  label for='vm_cores' CPU cores
-                  select.form-control required=true id='vm_cores' name='box[vm_cores]' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='configuration.vm_cores'
-            .row
-              .col-lg-4
-                .form-group
-                  label for='vm_shared_directory' Shared directory
-                  input.form-control required=true type='text' id='vm_shared_directory' name='box[vm_shared_directory]' ng-model='configuration.vm_shared_directory'
-              .col-lg-4
-                .form-group
-                  label for='vm_share_type'= t('.share_type')
-                  select.form-control required=true id='vm_share_type' name='box[vm_share_type]' ng-model='configuration.vm_share_type' ng-options='t.label for t in shareTypes track by t.id'
-              .col-lg-4
-                .form-group
-                  label for='vm_ip' IP address
-                  input.form-control required=true type='text' id='vm_ip' name='box[vm_ip]' ng-model='configuration.vm_ip'
-
-          .col-lg-4
-            label for='new_guest_port' Port forwarding
-            table.table.table-bordered
-              thead
-                tr
-                  th Guest port
-                  th Host port
-                  th
-              tbody
-                tr ng-repeat='port in configuration.vm_ports'
-                  input type='hidden' name='box[vm_ports[{{ $index }}][guest]]' value='{{ port.guest }}'
-                  input type='hidden' name='box[vm_ports[{{ $index }}][host]]' value='{{ port.host }}'
-                  td {{ port.guest }}
-                  td {{ port.host }}
-                  td
-                    button.btn.btn-danger type='button' ng-click='deletePort($index)' Delete
-                tr
-                  td
-                    input.form-control id='new_guest_port' type='number' placeholder='guest port' ng-model='newGuestPort'
-                  td
-                    input.form-control type='number' placeholder='host port' ng-model='newHostPort'
-                  td
-                    button.btn.btn-default ng-disabled='!newGuestPort || !newHostPort' ng-click='addPort()' Add
-
-a.anchor#app-settings
-.row.step.step2
-  .col-lg-1.step-number.visible-lg-block
-    h1 2
-  .col-lg-11.step-conf
-    .panel.panel-default
-      .panel-heading
-        h2.panel-title Application
-      .panel-body
-        .row
-          .col-lg-7
-            .form-group
-              label for='vm_name'= t('.name')
-              p
-                small It will be the name of your box and Linux service. Only alphanumeric characters, dashes and underscores are allowed.
-              input.form-control required=true id='vm_name' name='box[vm_name]' type='text' ng-model='configuration.vm_name' ng-pattern="/^[0-9a-zA-Z_-]+$/"
-          .col-lg-5
-            .form-group
-              label for='environment_file' Environment variables
-              p
-                small Application configuration will be read from <kbd>{{ configuration.environment_file }}</kbd> (if it exists).
-              input.form-control type='text' id='environment_file' name='box[environment_file]' ng-model='configuration.environment_file'
-        .row
-          .col-lg-2
-            label Install Ruby with
-            .form-group
-              .radio ng-repeat='k in ["rvm", "rbenv", "package"]'
-                label
-                  input name='box[ruby_install]' type='radio' value='{{ k }}' ng-model='configuration.ruby_install'
-                  ' {{ rubyInstalls[k].label }}
-          .col-lg-5
-            .form-group
-              label for='ruby_version'= t('.ruby_version')
-
-              p.small ng-show='configuration.ruby_install == "package"' ruby will be installed as system package using <a href="https://www.brightbox.com/docs/ruby/ubuntu/">brightbox/ruby-ng</a> apt repository.
-              p.small ng-show='configuration.ruby_install == "rbenv"' ruby will be installed with <a href="https://github.com/sstephenson/ruby-build">ruby-build</a> and version will be managed with <a href="https://github.com/sstephenson/rbenv">rbenv</a>.
-              p.small ng-show='configuration.ruby_install == "rvm"' ruby will be installed with <a href="https://rvm.io/">RVM</a>.
-
-              select.form-control id='ruby_version' name='box[ruby_version]' ng-options='rubyVersion.label for rubyVersion in rubyInstalls[configuration.ruby_install].rubies track by rubyVersion.version' ng-model='configuration.ruby_version'
-          .col-lg-5
-            .form-group ng-show='["rvm", "rbenv"].indexOf(configuration.ruby_install) > -1'
-              label for='manual_ruby_version' Other version
-              p
-                small Specify custom ruby version
-              input.form-control type='text' placeholder='ruby version' name='box[manual_ruby_version]' id='manual_ruby_version' ng-model='configuration.manual_ruby_version'
-
-a.anchor#server
-.row.step.step2
-  .col-lg-1.step-number.visible-lg-block
-    h1 3
-  .col-lg-11.step-conf
-    .panel.panel-default
-      .panel-heading
-        h2.panel-title Server
-      .panel-body
-        .row
-          .col-lg-4
-            .form-group
-              label for='server_name' Server name
-              p
-                small It's recommended to keep <kbd>localhost</kbd> value here.
-              input.form-control required='true' ng-pattern="/^[a-zA-Z0-9-.]+$/" id='server_name' name='box[server_name]' type='text' ng-model='configuration.server_name'
-          .col-lg-8
-            .form-group
-              label for='server_type' Server type
-              .radio ng-repeat='type in serverTypes'
-                label
-                  input name='box[server_type]' type='radio' value='{{ type.id }}' ng-model='configuration.server_type'
-                  ' {{ type.label }}
-              p
-                small ng-show='configuration.server_type == "nginx_unicorn"' Your application will be served by <a href="http://nginx.org/">nginx</a> and <a href="http://unicorn.bogomips.org/">unicorn</a>. You can control it by running standard upstart commands: <kbd>sudo stop {{ configuration.vm_name }}</kbd> and <kbd>sudo start {{ configuration.vm_name }}</kbd>.
-                small ng-show='configuration.server_type == "nginx_passenger"' Your application will be served by <a href="http://nginx.org/">nginx</a> and <a href="https://www.phusionpassenger.com/">Passenger</a>. You can restart Passenger by running <kbd>touch tmp/restart.txt</kbd> in your application dir or by restarting nginx with <kbd>service nginx restart</kbd>.
-a.anchor#databases
-.row.step.step3 ng-controller='DatabasesController'
-  .col-lg-1.step-number.visible-lg-block
-    h1 4
-  .col-lg-11.step-conf
-    .panel.panel-default
-      .panel-heading
-        h2.panel-title Databases
-      .panel-body
-        .dropdown ng-hide='allActive()'
-          button.btn.btn-lg.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='databasesMenu'
-            = t('.add_database')
-            ' 
-            span.caret
-          ul.dropdown-menu role='menu' aria-labelledby='databasesMenu'
-            li ng-repeat='database in allObjects' role='presentation' ng-hide='isActive(database.id)'
-              a role='menuitem' tabindex='-1' href='#' ng-click='add(database.id)' {{ database.name }}
-
-        input ng-repeat='database in activeObjects' type='hidden' name='box[databases][]' value='{{ database }}'
-
-        - Databases.list.each do |database|
-          .panel.panel-primary.database ng-show="isActive('#{database.id}')"
-            .panel-heading= t(".#{database.id}")
-            .panel-body
-              = render "boxes/databases/#{database.id}"
-              button.btn.btn-danger.pull-right type='button' ng-click="delete('#{database.id}')" Delete
-
-a.anchor#background-jobs
-.row.step.step4 ng-controller='BackgroundJobsController'
-  .col-lg-1.step-number.visible-lg-block
-    h1 5
-  .col-lg-11.step-conf
-    .panel.panel-default
-      .panel-heading
-        h2.panel-title Background jobs
-      .panel-body
-        .dropdown ng-hide='allActive()'
-          button.btn.btn-lg.btn-default.dropdown-toggle type='button' data-toggle='dropdown' id='backgroundJobsMenu'
-            = t('.add_worker')
-            ' 
-            span.caret
-          ul.dropdown-menu role='menu' aria-labelledby='backgroundJobsMenu'
-            li ng-repeat='backgroundJob in allObjects' role='presentation' ng-hide='isActive(backgroundJob.id)'
-              a role='menuitem' tabindex='-1' href='#' ng-click='add(backgroundJob.id)' {{ backgroundJob.name }}
-
-        input ng-repeat='backgroundJob in activeObjects' type='hidden' name='box[background_jobs][]' value='{{ backgroundJob }}'
-
-        - Box.background_jobs.each do |background_job|
-          .panel.panel-primary ng-show="isActive('#{background_job.id}')"
-            .panel-heading= background_job.name
-            .panel-body
-              = render "boxes/background_jobs/#{background_job.id}"
-              button.btn.btn-danger.pull-right type='button' ng-click="delete('#{background_job.id}')" Delete
+div ng-controller='MultiChoiceController'
+  = render 'boxes/steps/step1_system'
+  = render 'boxes/steps/step2_environments'
+  = render 'boxes/steps/step3_application'
+  = render 'boxes/steps/step4_server'
+  = render 'boxes/steps/step5_databases'
+  = render 'boxes/steps/step6_background_jobs'
 
 .row.step.download-step
   .col-lg-12
