--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,7 @@ html lang="en"
   head
     = render 'shared/head'
 
-  body ng-app='app.rubyops' data-spy='scroll' data-target='.navbar'
+  body ng-app='app.railsbox' data-spy='scroll' data-target='.navbar'
     nav.navbar.navbar-fixed-top.navbar-default
       .container
         .navbar-header
@@ -18,6 +18,8 @@ html lang="en"
               a href='#home' Home
             li
               a href='#vm-settings' System
+            li
+              a href='#environments' Environments
             li
               a href='#app-settings' Application
             li
