--- a/app/views/layouts/box.html.slim
+++ b/app/views/layouts/box.html.slim
@@ -3,7 +3,7 @@ html lang="en"
   head
     = render 'shared/head'
 
-  body ng-app='app.rubyops' data-spy='scroll' data-target='.navbar'
+  body ng-app='app.railsbox' data-spy='scroll' data-target='.navbar'
     nav.navbar.navbar-fixed-top.navbar-default
       .container-fluid
         .navbar-header
