--- a/templates/environment/Vagrantfile.docker.erb
+++ b/templates/environment/Vagrantfile.docker.erb
@@ -3,7 +3,7 @@
 
 Vagrant.require_version '>= 1.7'
 
-<%= render 'vagrant_plugins' %>
+<%= render 'environment/vagrant_plugins' %>
 
 Vagrant.configure('2') do |config|
   containers = [
