Fix false positives

--- a/app/views/boxes/show.html.slim
+++ b/app/views/boxes/show.html.slim
@@ -62,7 +62,8 @@
               ...
               railsbox/
                 ansible/
-                Vagrantfile
+                development/
+                  Vagrantfile
               Gemfile
               ...
 
@@ -71,7 +72,7 @@
       p Go to the <kbd>railsbox</kbd> directory and type <kbd>vagrant up</kbd>. vagrant will download the base box and provision it with ansible using your configuration.
       p
         pre
-          | cd /path/to/rails/project/railsbox
+          | cd /path/to/rails/project/railsbox/development
             vagrant up
       p Note that vagrant may ask for a sudo password. That's required when you're using NFS for folder synchronization.
       p Once it's done, you'll be able to login into it using <kbd>vagrant ssh</kbd> command. Your application is stored in <kbd>#{@box.vm_shared_directory}</kbd> directory.
