--- a/templates/environment/Vagrantfile.docker.erb
+++ b/templates/environment/Vagrantfile.docker.erb
@@ -34,14 +34,14 @@ Vagrant.configure('2') do |config|
         # We need to use NFS + bindfs combination here because NFS gives adequate performance, but does
         # not allows to change the ownership of synced directory. bindfs will rebind the directory with
         # correct permissions.
-        container.vm.synced_folder '../', '/vagrant'<%= vm_share_type_param %>
+        container.vm.synced_folder '../../', '/vagrant'<%= vm_share_type_param %>
       end
 
       container.ssh.username = "root"
       container.ssh.private_key_path = "phusion.key"
 
       container.vm.provision 'ansible' do |ansible|
-        ansible.playbook = 'ansible/site.yml'
+        ansible.playbook = '../ansible/site.yml'
         ansible.sudo = true
 
         ansible.groups = {}
