--- a/templates/environment/Vagrantfile.single.erb
+++ b/templates/environment/Vagrantfile.single.erb
@@ -14,7 +14,7 @@ Vagrant.configure('2') do |config|
 
   if ansible_installed?
     config.vm.provision 'ansible' do |ansible|
-      ansible.playbook = 'ansible/site.yml'
+      ansible.playbook = '../ansible/site.yml'
       ansible.sudo = true
       ansible.groups = {
         'application' => %w(<%= params[:vm_name] %>),
@@ -28,7 +28,7 @@ Vagrant.configure('2') do |config|
       ansible.raw_arguments = ENV['ANSIBLE_ARGS']
     end
   else
-    Dir['shell/*.sh'].each do |script|
+    Dir['../shell/*.sh'].each do |script|
       config.vm.provision 'shell', :path => script, :privileged => false, :args => ENV['ANSIBLE_ARGS']
     end
   end
