--- a/app/views/boxes/steps/_step2_application.html.slim
+++ b/app/views/boxes/steps/_step2_application.html.slim
@@ -8,24 +8,32 @@ a.anchor#app-settings
         h2.panel-title Application
       .panel-body
         .row
-          .col-lg-3
+          .col-lg-7
             .form-group
               label for='vm_name'= t('boxes.form.name')
               p
                 small It will be the name of your box and Linux service. Only alphanumeric characters, dashes and underscores are allowed.
               input.form-control required=true id='vm_name' name='box[vm_name]' type='text' ng-model='configuration.vm_name' ng-pattern="/^[0-9a-zA-Z_-]+$/"
-          .col-lg-4
-            .form-group
-              label for='git_url'= t('boxes.form.git_url')
-              p
-                small If you would like to add staging or production environments, railsbox needs to know where your application is hosted. Make sure you specify SSH URL here so that it's possible to use SSH agent forwarding.
-              input.form-control id='git_url' name='box[git_url]' type='text' ng-model='configuration.git_url' placeholder='git@github.com:andreychernih/railsbox.git'
           .col-lg-5
             .form-group
               label for='environment_file' Environment variables
               p
                 small Application configuration will be read from <kbd>{{ configuration.environment_file }}</kbd> (if it exists).
               input.form-control type='text' id='environment_file' name='box[environment_file]' ng-model='configuration.environment_file'
+        .row
+          .col-lg-6
+            .form-group
+              label for='git_url'= t('boxes.form.git_url')
+              p
+                small If you would like to add staging or production environments, railsbox needs to know where your application is hosted. Make sure you specify SSH URL here so that it's possible to use SSH agent forwarding.
+              input.form-control id='git_url' name='box[git_url]' type='text' ng-model='configuration.git_url' placeholder='git@github.com:andreychernih/railsbox.git'
+          .col-lg-6
+            .form-group
+              label for='git_branch'= t('boxes.form.git_branch')
+              p
+                small Branch which will be used for staging/production deployments.
+              br
+              input.form-control id='git_branch' name='box[git_branch]' type='text' ng-model='configuration.git_branch'
         .row
           .col-lg-2
             label Install Ruby with
