--- a/templates/environment/virtualbox/Vagrantfile.dockerhost.erb
+++ b/templates/environment/virtualbox/Vagrantfile.dockerhost.erb
@@ -4,7 +4,7 @@
 Vagrant.require_version '>= 1.7'
 
 Vagrant.configure('2') do |config|
-<%= render 'environment/virtualbox_config' %>
+<%= render 'virtualbox_config' %>
 
   config.vm.box = '<%= params[:vm_os] %>'
 
