--- a/app/views/boxes/steps/_step3_environments.html.slim
+++ b/app/views/boxes/steps/_step3_environments.html.slim
@@ -46,24 +46,24 @@ a.anchor#environments
                     .col-lg-4
                       .form-group
                         label for='{{ environment }}_vm_memory'= t('boxes.form.memory')
-                        input.form-control required=true id='{{ environment }}_vm_memory' name='box[{{ environment }}][vm_memory]' type='text' ng-model='configuration[environment].vm_memory' ng-pattern="/^[0-9]+$/"
+                        input.form-control ng-required='isVirtualBox()' id='{{ environment }}_vm_memory' name='box[{{ environment }}][vm_memory]' type='text' ng-model='configuration[environment].vm_memory' ng-pattern="/^[0-9]+$/"
                     .col-lg-4
                       .form-group
                         label for='{{ environment }}_vm_swap' Swap, Mb
-                        input.form-control required=true id='{{ environment }}_vm_swap' name='box[{{ environment }}][vm_swap]' type='text' ng-model='configuration[environment].vm_swap' ng-pattern="/^[0-9]+$/"
+                        input.form-control ng-required='isVirtualBox()' id='{{ environment }}_vm_swap' name='box[{{ environment }}][vm_swap]' type='text' ng-model='configuration[environment].vm_swap' ng-pattern="/^[0-9]+$/"
                     .col-lg-4
                       .form-group
                         label for='{{ environment }}_vm_cores' CPU cores
-                        select.form-control required=true id='{{ environment }}_vm_cores' name='box[{{ environment }}][vm_cores]' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='configuration[environment].vm_cores'
+                        select.form-control ng-required='isVirtualBox()' id='{{ environment }}_vm_cores' name='box[{{ environment }}][vm_cores]' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='configuration[environment].vm_cores'
                   .row
                     .col-lg-6
                       .form-group
                         label for='{{ environment }}_vm_share_type'= t('boxes.form.share_type')
-                        select.form-control required=true id='{{ environment }}_vm_share_type' name='box[{{ environment }}][vm_share_type]' ng-model='configuration[environment].vm_share_type' ng-options='t.label for t in shareTypes track by t.id'
+                        select.form-control ng-required='isVirtualBox()' id='{{ environment }}_vm_share_type' name='box[{{ environment }}][vm_share_type]' ng-model='configuration[environment].vm_share_type' ng-options='t.label for t in shareTypes track by t.id'
                     .col-lg-6
                       .form-group
                         label for='{{ environment }}_vm_ip' IP address
-                        input.form-control required=true type='text' id='{{ environment }}_vm_ip' name='box[{{ environment }}][vm_ip]' ng-model='configuration[environment].vm_ip'
+                        input.form-control ng-required='isVirtualBox()' type='text' id='{{ environment }}_vm_ip' name='box[{{ environment }}][vm_ip]' ng-model='configuration[environment].vm_ip'
                 .col-lg-4 ng-controller='VirtualMachineController'
                   label for='{{ environment }}_new_guest_port' Port forwarding
                   table.table.table-bordered
@@ -94,14 +94,14 @@ a.anchor#environments
                 .col-lg-6
                   .form-group
                     label for='{{ environment }}_host'= t('boxes.form.server_host')
-                    input.form-control id='{{ environment }}_host' name='box[{{ environment }}][host]' type='text' ng-model='configuration[environment].host'
+                    input.form-control id='{{ environment }}_host' name='box[{{ environment }}][host]' type='text' ng-model='configuration[environment].host' ng-required='isServer()'
                 .col-lg-3
                   .form-group
                     label for='{{ environment }}_port'= t('boxes.form.server_port')
-                    input.form-control id='{{ environment }}_port' name='box[{{ environment }}][port]' type='text' ng-model='configuration[environment].port'
+                    input.form-control id='{{ environment }}_port' name='box[{{ environment }}][port]' type='text' ng-model='configuration[environment].port' ng-required='isServer()'
                 .col-lg-3
                   .form-group
                     label for='{{ environment }}_username'= t('boxes.form.server_username')
-                    input.form-control id='{{ environment }}_username' name='box[{{ environment }}][username]' type='text' ng-model='configuration[environment].username'
+                    input.form-control id='{{ environment }}_username' name='box[{{ environment }}][username]' type='text' ng-model='configuration[environment].username' ng-required='isServer()'
 
             button.btn.btn-danger.pull-right type='button' ng-show='activeObjects.length > 1' ng-click="delete(environment)" Delete
